<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<data>
    <variable
        name="authViewModel"
        type="alexander.skornyakov.yourwords.ui.auth.AuthViewModel" />
</data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <EditText
            android:id="@+id/email_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/email_textedit_background"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:textColor="@color/button_text_color"
            android:textSize="24sp"
            android:text="@={authViewModel._email_edit}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:autofillHints="" tools:targetApi="o"/>

        <EditText
            android:id="@+id/password_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/email_textedit_background"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:textColor="@color/button_text_color"
            android:textSize="24sp"
            android:text="@={authViewModel._password_edit}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text_edit"
            android:autofillHints="" tools:targetApi="o"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/common_signin_button_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/common_signin_button_text"
            android:textColor="@color/button_text_color"
            android:onClick="@{()->authViewModel.signIn()}"
            app:layout_constraintEnd_toEndOf="@+id/password_text_edit"
            app:layout_constraintStart_toStartOf="@+id/password_text_edit"
            app:layout_constraintTop_toBottomOf="@+id/password_text_edit" />

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/sign_up"
            android:textColor="@color/button_text_color"
            app:layout_constraintBottom_toBottomOf="@+id/new_password_button"
            app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
            app:layout_constraintStart_toEndOf="@+id/new_password_button"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

        <Button
            android:id="@+id/new_password_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="?attr/colorPrimaryDark"
            android:text="@string/reset_password"
            android:textColor="@color/button_text_color"
            app:layout_constraintEnd_toStartOf="@+id/sign_up_button"
            app:layout_constraintStart_toStartOf="@+id/sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"

            android:contentDescription="@string/person_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>