<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item android:title="My collection" />
        <item
            android:enabled="false"
            android:title="Sets store" />
        <item android:id="@+id/signout_menu_item" android:title="Logout" />
    </group>
</menu>