<resources>
    <string name="app_name">Your words</string>
    <string name="add_set">Add Set</string>
    <string name="username">Username</string>
    <string name="user_mail_com">user@mail.com</string>
    <string name="user_photo">User photo</string>
    <string name="reset_password">Reset password</string>
    <string name="sign_up">Sign up</string>
    <string name="email_hint">Email...</string>
    <string name="password_hint">Password...</string>
    <string name="person_picture">Person picture</string>
    <string name="reset_password_label">Reset password</string>
    <string name="email_edit_hint">Email...</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="invalid_email">This is not a valid email address!</string>
    <string name="pass_less_than_six">Password\'s length must be more than 6 characters!</string>
    <string name="check_internet">Check your internet connection!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
